Added [MetaJSON] to dist.ini so META.json will be in the release

--- a/dist.ini
+++ b/dist.ini
@@ -4,11 +4,12 @@ license = Perl_5
 copyright_holder = Neil Bowers
 copyright_year   = 2013
 
-version = 0.02
+version = 0.03
 
 [@Basic]
 [PkgVersion]
 [AutoPrereqs]
+[MetaJSON]
 [ExtraTests]
 
 [GithubMeta]
